# sisyphus-font

./: .gitignore  example.py  pyproject.toml  test.py
fontscrape/: fonts.py  subparse.py
